--- a/locales/es.json
+++ b/locales/es.json
@@ -226,5 +226,9 @@
     "download": "Descargar",
     "downloadingUpdate": "Descargando actualización...",
     "noApkFound": "No se encontró un archivo APK en la versión.",
-    "downloadFailed": "Descarga Fallida"
+    "downloadFailed": "Descarga Fallida",
+    "loginWithSso": "Iniciar sesión con SSO",
+    "close": "Cerrar",
+    "or": "O",
+    "exampleUrl": "Ej: 192.168.1.100:8080 o http://romm.local:8080"
 }
